--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ViewPager.Fragment.TimelineFragment">
 
+      <Button
+          android:id="@+id/button_sort"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="5dp"
+          android:layout_marginEnd="5dp"
+          android:text="최신순"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recyclerView_timeline"
           android:layout_width="0dp"
@@ -16,6 +26,7 @@
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintVertical_bias="0.0"
           tools:listitem="@layout/time_line_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
