--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/scroll_view"
-    tools:context=".Main.GridActivity">
+    tools:context=".Test.GridActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
