--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewPager.ViewPagerActivity">
+    tools:context=".Main.View.Activity.ViewPagerActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
