--- a/app/src/main/res/layout/time_line_list.xml
+++ b/app/src/main/res/layout/time_line_list.xml
@@ -12,8 +12,10 @@
         android:layout_margin="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         app:cardBackgroundColor="#DAF4FF"
         app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent">
