--- a/app/src/main/res/layout/activity_infinite.xml
+++ b/app/src/main/res/layout/activity_infinite.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".Test.InfiniteViewPager.InfiniteActivity">
 
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
