2021 09 14 커밋 (testAdmob 구현)

--- a/app/src/main/res/layout/ad_view.xml
+++ b/app/src/main/res/layout/ad_view.xml
@@ -12,14 +12,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView_ad"
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:background="@color/black"
-            android:gravity="center"
-            android:text="광고입니다"
-            android:textColor="@color/white"
-            android:textSize="35sp" />
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+        </com.google.android.gms.ads.AdView>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
