--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,52 +14,58 @@
         app:layout_constraintBottom_toTopOf="@+id/bottom_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:fillViewport="true"
         tools:context=".Main.View.Fragment.WriteFragment">
 
         <!-- TODO: Update blank fragment layout -->
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:id="@+id/editText_title"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/rec"
-                android:fontFamily=""
-                android:hint="제목을 입력해주세요"
-                android:inputType="text"
-                app:layout_constraintBottom_toTopOf="@+id/editText_contents"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/button_write"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:text="글쓰기"
-                app:layout_constraintBottom_toTopOf="@+id/editText_title"
-                app:layout_constraintEnd_toEndOf="@+id/editText_title" />
+                app:layout_constraintEnd_toEndOf="@+id/editText_title"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_title"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/rec"
+                android:hint="제목을 입력해주세요"
+                android:inputType="text"
+                android:paddingStart="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button_write" />
 
             <EditText
                 android:id="@+id/editText_contents"
-                android:layout_width="0dp"
-                android:layout_height="300dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/rec"
+                android:gravity="start"
                 android:hint="본문을 입력해주세요"
                 android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:maxLines="10"
+                android:minLines="10"
+                android:paddingStart="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText_title" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.core.widget.NestedScrollView>
 
@@ -68,6 +74,10 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="#3F51B5"
+        android:layout_gravity="bottom"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -76,6 +86,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginStart="5dp"
+            android:focusableInTouchMode="true"
             android:text="◀"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +97,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginStart="5dp"
+            android:focusableInTouchMode="true"
             android:text="▶"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/button_move_previous"
@@ -101,4 +113,4 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
